<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Wound Screener V2</string>
  <string name="app_description">AR application for capturing wound images</string>

  <string name="button_start">Start</string>
  <string name="button_history">View History</string>
  <string name="button_continue">Continue</string>

  <string name="activities_list_title_string">AR Wound</string>
  <string name="activities_list_empty">No activities</string>
  <string name="button_canc">Cancel</string>
  <string name="button_cont">Continue</string>

  <string name="hint_id">Patient ID</string>
  <string name="hint_name">Patient name</string>
  <string name="hint_height">Height (cm)</string>
  <string name="hint_age">Age</string>

  <string name="text_id">Patient ID:</string>
  <string name="text_name">Patient name:</string>

  <string name="button_OK">OK</string>

  <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
  <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
  <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
  <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
  <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
  <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
  <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
  <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
  <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
  <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
  <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
  <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
  <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
  <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
  <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
  <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network questionnaire has timed out, please check your internet connection and try again.</string>
  <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
  <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>

  <string name="content_desc_camera_button">Camera Button</string>
  <string name="overlay_build_target_help">Hold the device parallel to the target</string>
  <string name="target_quality_error_title">Low Quality Image</string>
  <string name="target_quality_error_desc">The image has very little detail, please try another.</string>

  <string name="menu_back">Vuforia Samples</string>
  <string name="menu_extended_tracking">Extended Tracking</string>
  <string name="menu_character_mode">Character Mode</string>
  <string name="menu_flash">Flash</string>
  <string name="menu_flash_error_on">Unable to turn on flash</string>
  <string name="menu_flash_error_off">Unable to turn off flash</string>
  <string name="menu_contAutofocus">Autofocus</string>
  <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
  <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
  <string name="menu_datasets">DATASETS</string>
  <string name="menu_camera">CAMERA</string>
  <string name="menu_camera_front">Front</string>
  <string name="menu_camera_back">Rear</string>
  <string name="menu_button_red">Red</string>
  <string name="menu_button_blue">Blue</string>
  <string name="menu_button_yellow">Yellow</string>
  <string name="menu_button_green">Green</string>

  <string name="splash_screen_description">Vuforia Splash</string>

  <string name="patient_name">Patient Name</string>
  <string name="patient_id">Patient ID</string>
  <string name="patient_info">Patient info</string>
  <string name="history">View History</string>
  <string name="begin">Begin</string>
  <string name="file_name"></string>
  <string name="date_time">Date</string>
  <string name="size">Size</string>
  <string name="raw_data"><b>Raw Data</b></string>
  <string name="results">Results</string>

  <string name="activity_instructions_title">Instructions</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>
  <string name="select_existing_case_spinner_label">Select an existing case</string>


  <string name="continue_button_label">Continue</string>
  <string name="cancel_button_label">Cancel</string>
  <string name="show_history_button_label">Show History</string>
  <string name="go_back_button_label">Go Back</string>
  <string name="anonymous_mode_label">Anonymous Mode</string>
  <string name="new_patient_button_label">New Patient</string>
  <string name="existing_patient_button_label">Existing Patient</string>
  <string name="start_button_label">Start</string>
  <string name="logo_contentDescription">Peak Flow Meter Logo</string>
  <string name="dialog_message">Click OK to share image via WhatsApp.</string>
  <string name="dialog_message_kr">Urashaka kohereza ifoto?</string>
  <string name="dialog_ok">OK</string>
  <string name="dialog_cancel">Cancel</string>
  <string name="dialog_ok_kr">Yego</string>
  <string name="dialog_cancel_kr">Oya</string>

  <!-- About Activity -->
  <string name="activity_about_title">About</string>
  <string name="format_version">version %1$s</string>
  <string name="copyright_label">© 2018 Mobile Technology Lab</string>
  <string name="mit_label">Massachusetts Institute of Technology</string>
  <string name="mobile_tech_lab_link" translatable="false">http://www.mobiletechnologylab.org</string>
  <string name="partnership_label">In partnership with</string>
  <string name="acknowledgements_label">Acknowledgements</string>
  <string name="support_label">Created with support from</string>
  <string name="phfi_logo_content_description">Chest Research Foundation Logo</string>
  <string name="tata_trusts_logo_content_description">TATA Trusts Logo</string>
  <string name="mit_tata_center_logo_content_description">M I T Tata Center logo</string>

  <!--Height Dialog-->
  <string name="height_dialog_title">Patient\'s height</string>
  <string name="height_dialog_message">What is the patient\'s height in cm?</string>
  <string name="height_dialog_no_value_validation">Height value is required</string>
  <!---->

  <!--Menu Strings-->
  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>

  <!--Preferences-->
  <string name="general_settings_title">General</string>
  <string name="pref_mode_key">mode</string>
  <string name="pref_mode_label">Mode</string>
  <string name="pref_mode_dialog_title">Select App Mode</string>
  <string name="pref_mode_anonymous">anonymous</string>
  <string name="pref_mode_label_anonymous">Anonymous</string>
  <string name="pref_mode_label_clinical">Clinical</string>
  <string name="pref_mode_clinical">clinical</string>

  <!---->
  <string name="clinician_id_label">Clinician ID</string>
  <string name="height_label">Height (cm)</string>
  <string name="date_of_birth_label">Date of Birth</string>
  <string name="gender_label">Gender</string>
  <string name="retest_button_label">Retest</string>
  <string name="restart_button_label">Restart</string>
  <string name="save_button_label">Save</string>
  <string name="export_button_label">Export</string>
  <string name="exit_button_label">Exit</string>
  <string name="instruction_label1">Step 1) Place the surgical drape over the patient such that the wound is viewable within the border.</string>
  <string name="instruction_label2">Step 2) Aim phone camera at wound from directly above in order to capture an image.</string>
  <string name="instruction_label_kr_1">Intambwe ya 1)  Shyira igipapuro k\' umurwayi kuburyo igisebe cyose kihgaragara hagati mu gipapuro ahari umwanya.</string>
  <string name="instruction_label_kr_2">Intambwe ya 2)  Gerageza camera ya telephone ijye hejuru y igisebe aho kigaragara neza, maze ufotore.</string>
  <string name="instructions1_contentDescription">Image of Surgical drape target</string>
  <string name="instructions2_contentDescription">Image of app in us while aiming phone at surgical drape target</string>

  <string name="missing_app_dialog_message">The app for this measurement is missing. Would you like to install it?</string>
  <string name="missing_app_dialog_title">Measurement app is missing</string>
  <string name="missing_app_dialog_install_action_text">Install</string>
  <string name="missing_app_dialog_cancel_action_text">Cancel</string>

  <string name="select_measurements">No measurements selected</string>
</resources>