<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="20dp"
  android:isScrollContainer="true"
  android:orientation="vertical"
  tools:context="com.mobiletechnologylab.wound_imager.AboutActivity">


  <!--(c)2018 Mobile Technology Lab-->
  <!--Massachusetts Institute of Technology-->
  <!--http://www.mobiletechnologylab.org-->

  <!--Created with support from:-->

  <!--(logo) The Tata Trust-->
  <!--(logo) MIT Tata Center-->

  <!--in partnership with:-->

  <!--(logo) Public Health Foundation of India-->

  <!--Acknowledgements:-->
  <!--AIIMS Hospital, Pediatrics Department-->

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/app_name_textView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/app_name"
      android:textAppearance="@android:style/TextAppearance.Large"/>

    <Space
      android:layout_width="20dp"
      android:layout_height="10dp"
      android:layout_weight="1"/>

    <TextView
      android:id="@+id/version_textView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/format_version"
      android:textAppearance="@android:style/TextAppearance.Medium"/>

  </LinearLayout>

  <Space
    android:layout_width="match_parent"
    android:layout_height="15dp"/>

  <TextView
    android:id="@+id/copyright_textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/copyright_label"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <TextView
    android:id="@+id/mit_textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/mit_label"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <TextView
    android:id="@+id/lab_link_textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autoLink="web"
    android:text="@string/mobile_tech_lab_link"
    android:textAppearance="@style/TextAppearance.AppCompat"
    android:textColor="@color/colorAccent"/>

  <Space
    android:layout_width="match_parent"
    android:layout_height="15dp"/>


  <TextView
    android:id="@+id/support_label_textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/support_label"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_margin="5dp"
    android:adjustViewBounds="true"
    android:contentDescription="@string/mit_tata_center_logo_content_description"
    android:src="@drawable/mit_tata_center_logo"
    app:srcCompat="@drawable/mit_tata_center_logo"/>

  <ImageView
    android:id="@+id/tata_trusts_imageView"
    android:layout_width="wrap_content"
    android:layout_height="70dp"
    android:layout_marginEnd="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginStart="10dp"
    android:adjustViewBounds="true"
    android:contentDescription="@string/tata_trusts_logo_content_description"
    app:srcCompat="@drawable/tata_trusts_logo"/>

  <Space
    android:layout_width="match_parent"
    android:layout_height="15dp"/>

  <TextView
    android:id="@+id/partnership_label_textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/partnership_label"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <ImageView
    android:id="@+id/crf_india_imageView"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:layout_marginEnd="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:adjustViewBounds="true"
    android:contentDescription="@string/phfi_logo_content_description"
    android:src="@drawable/crf_india_logo"
    app:srcCompat="@drawable/crf_india_logo"/>

  <Space
    android:layout_width="match_parent"
    android:layout_height="15dp"/>

  <TextView
    android:id="@+id/acknowledgements_label_textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/acknowledgements_label"
    android:textAppearance="@android:style/TextAppearance.Medium"
    android:visibility="gone"/>


</LinearLayout>
