<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/instructions"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".history.InstructionsActivity">

  <TextView
    android:id="@+id/step1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:textAlignment="center"
    android:gravity="center_horizontal"
    android:text="@string/instruction_label1"
    android:textAppearance="?android:attr/textAppearanceSmall"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_below="@+id/step1"
    android:id="@+id/flowmeter_image"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/instructions1_contentDescription"
    android:src="@drawable/instruct_target"
    android:scaleType="centerInside"/>

  <TextView
    android:id="@+id/step2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/flowmeter_image"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:textAlignment="center"
    android:gravity="center_horizontal"
    android:text="@string/instruction_label2"
    android:textAppearance="?android:attr/textAppearanceSmall"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:id="@+id/instructions2"
    android:layout_below="@+id/step2"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/instructions2_contentDescription"
    android:src="@drawable/instruct_tablet"
    android:scaleType="centerInside"/>

  <Button
    android:id="@+id/start_button"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:text="@string/button_start"
    android:textAppearance="@android:style/TextAppearance.Medium"/>
  <!--android:onClick="goForth"-->
</RelativeLayout>