<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/history_new_id"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.mobiletechnologylab.wound_imager.history.NewIdActivity">


  <EditText
    android:id="@+id/clinicianIdEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/patient_id"
    android:layout_alignStart="@+id/patient_id"
    android:layout_alignParentTop="true"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:hint="@string/clinician_id_label"
    android:inputType="number"
    android:maxLength="2"
    android:visibility="visible"/>

  <EditText
    android:id="@+id/patient_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/hint_id"
    android:inputType="number"
    android:maxLength="5"
    android:layout_below="@+id/clinicianIdEditText"
    android:layout_centerHorizontal="true"/>

  <Button
    android:id="@+id/continue_button"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/patient_id"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:onClick="goForth"
    android:text="@string/button_cont"
    android:textAppearance="@android:style/TextAppearance.Medium"/>


  <Button
    android:id="@+id/goBackBtn"
    style="@android:style/Widget.DeviceDefault.Button.Borderless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="@string/go_back_button_label"
    android:textColor="?android:attr/textColorLink"
    android:visibility="gone"/>

</RelativeLayout>