<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.mobiletechnologylab.wound_imager.history.ExistingIdActivity">

  <!-- The primary full-screen view. This can be replaced with whatever view
       is needed to present your content, e.g. VideoView, SurfaceView,
       TextureView, etc. -->

  <!-- This FrameLayout insets its children based on system windows using
       android:fitsSystemWindows. -->


  <TextView
    android:id="@+id/patientIdLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/patientProfileSpinner"
    android:layout_alignStart="@+id/patientProfileSpinner"
    android:layout_below="@+id/goBackBtn"
    android:layout_marginTop="43dp"
    android:text="@string/patient_id"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <Spinner
    android:id="@+id/patientProfileSpinner"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/patientIdLabelTextView"
    android:layout_centerHorizontal="true"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <Button
    android:id="@+id/nextBtn"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/patientProfileSpinner"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="42dp"
    android:text="@string/continue_button_label"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <Button
    android:id="@+id/history_button"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/nextBtn"
    android:layout_alignStart="@+id/nextBtn"
    android:layout_below="@+id/nextBtn"
    android:layout_marginTop="22dp"
    android:text="@string/show_history_button_label"
    android:textAppearance="@android:style/TextAppearance.Medium"/>

  <Button
    android:id="@+id/goBackBtn"
    style="@android:style/Widget.DeviceDefault.Button.Borderless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="@string/go_back_button_label"
    android:textColor="?android:attr/textColorLink"
    android:visibility="gone"/>


</RelativeLayout>
